syntax = "proto3";

package sf.substreams.uniswap.v3;
option go_package = "github.com/streamingfast/substreams-uniswap-v3-info/pb;pbinfo";

message PoolDayData {
  uint64 date = 1;
  string volume_usd = 2;
  string tvl_usd = 3;
  string fees_usd = 4;
  Pool pool = 5;
}

message Pool {
  string fee_tier = 1;
}
